2004-12-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-content-type.c (g_mime_content_type_is_type): Fixed
	to do as advertised - allow wildcard matching for type.

2004-12-06  Joe Shaw  <joeshaw@novell.com>

	* mono/Makefile.am: Add InternetAddress.custom

	* mono/InternetAddress.custom: Added.  Implements a new class
	which will handle the destroying of InternetAddressLists.
	Implement ParseString, which basically implements a managed
	version of internet_address_parse_string.

	* mono/Message.custom: Use the InternetAddressList for
	GetRecipients ().

2004-12-01  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Error out if the user explicitly enables the mono
	bindings and we can't find mcs.

	* gmime.spec.in: Add support for the mono bindings, placing them
	in a separate gmime-sharp package.  Patch from Ryan Skadberg
	<skadz@stigmata.org>

2004-11-29  Joe Shaw  <joeshaw@novell.com>

	* mono/AssemblyInfo.cs.in: Add @srcdir@ to AssemblyKeyFile so we
	build when builddir != srcdir.

	* mono/Makefile.am: Add gmime-sharp.pub to EXTRA_DIST.

2004-11-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c: #define _POSIX_SOURCE so it compiles
	on IRIX.

	* gmime/gmime-multipart-signed.c (multipart_signed_remove_header):
	Same.

	* gmime/gmime-multipart-encrypted.c
	(multipart_encrypted_remove_header): Don't return.

2004-11-19  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: Don't autogenerate get GetDate method

	* mono/Message.custom: Implement it by hand and return a DateTime.

2004-11-17  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: More metadata goodness.

	* mono/Makefile.am: Added Object.custom and Stream.custom.

	* mono/Object.custom: Add a GetData() method which returns a byte
	array of the object's data.

	* mono/Stream.custom: Add a wrapper around Seek() so that you
	don't need to specify whence.

2004-11-16  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Generate mono/gmime-sharp.pc.
